overflow issue resolved.

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@ body {
 	background-color: #14110F;
 	color: #F3F3F4;
 	margin: 0 auto;
-	overflow: hidden;
+	overflow-x: hidden;
 }
